general-templates/deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    kompose.version: 1.7.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: CONTAINERNAME
  name: CONTAINERNAME
spec:
  replicas: MINIMUMPODS
  selector:
    io.kompose.service: CONTAINERNAME
  strategy:
    resources: {}
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 60
      intervalSeconds: 60
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: CONTAINERNAME
    spec:
      containers:
      - image: 'IMAGESTREAM'
        name: CONTAINERNAME
        ports:
        - containerPort: PORTNO
        resources: {}
${VOLUMESTART}
        volumeMounts:
        - mountPath: CONTAINERVOLUME
          name: PVCLAIMNAME
${VOLUMEEND}
      restartPolicy: Always
${VOLUMESTART}
      volumes:
      - name: PVCLAIMNAME
        persistentVolumeClaim:
          claimName: PVCLAIMNAME
${VOLUMEEND}
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - CONTAINERNAME
      from:
        kind: ImageStreamTag
        name: IMAGESTREAM
    type: ImageChange
status: {}
