general-templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.7.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: CONTAINERNAME
  name: CONTAINERNAME
spec:
  ports:
  - name: "PORTNO"
    port: PORTNO
    targetPort: PORTNO
  selector:
    io.kompose.service: CONTAINERNAME
status:
  loadBalancer: {}
