general-templates/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: PROJECTNAME
spec:
  host: PUBLICURL
  port:
    targetPort: 'PORTNO'
  to:
    kind: Service
    name: PROJECTNAME
